crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_035_JYCompany35_Warioland_II_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-035-JYCompany35/Warioland II (Unl).zip
rom_sha256=52dfe6aee6abf9e607cf564a3449a770f4c6099c07e87e95d5240692e19ff973
frames=1141
fb_bytes=245760
cycles=33949962
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
