crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_036_TXC36_3_in_1_Supergun_Asia_Ja_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-036-TXC36/3 in 1 Supergun (Asia) (Ja) (Unl).zip
rom_sha256=95095501cb289d961864ce9fe223d28bfc2d7f290e9890bdfddfe03c32e411de
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=94d045ac8a4d83c6
checkpoint f900 fb_fnv1a64=f14f72280a185a1f
checkpoint f1100 fb_fnv1a64=54430d35dbc236d7
