crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_036_TXC36_Policeman_Spain_Gluk_Video_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-036-TXC36/Policeman (Spain) (Gluk Video) (Unl).zip
rom_sha256=2bfd11d9617c88d4ae2af6a266613844ee02b993d1787db5b02e84674bbc10fe
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
