crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_037_SMB_Tetris_NWC_Super_Mario_Bros_Tetris_Nintendo_World_Cup_E.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-037-SMB-Tetris-NWC/Super Mario Bros. + Tetris + Nintendo World Cup (E) [!].nes
rom_sha256=814763cdcc615c1988fd414a5a799a12fe2d4b902bdb4fb12b883c7e8f0bcac3
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=c46acf05b19ba440
checkpoint f900 fb_fnv1a64=67ca09d784916533
checkpoint f1100 fb_fnv1a64=67ca09d784916533
